--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,10 @@ name: Build and Deploy with Buildpacks
 on:
   push:
     branches:
-      - main  # Trigger the workflow on push to the main branch
+      - ml-dev  # Trigger the workflow on push to the main branch
   pull_request:
     branches:
-      - main  # Trigger the workflow on pull requests to the main branch
+      - ml-dev  # Trigger the workflow on pull requests to the main branch
 
 jobs:
   build:
@@ -30,5 +30,5 @@ jobs:
 
     - name: Build and push Docker image using Buildpacks
       run: |
-        pack build ${{ secrets.DOCKER_USERNAME }}/transventricular-image --builder gcr.io/buildpacks/builder:v1 --path .
-        docker push ${{ secrets.DOCKER_USERNAME }}/transventricular-image:latest
+        pack build ${{ secrets.DOCKER_USERNAME }}/transventricular-image:ml-dev --builder gcr.io/buildpacks/builder:v1 --path .
+        docker push ${{ secrets.DOCKER_USERNAME }}/transventricular-image:ml-dev
